--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     ]
   },
   "devDependencies": {
-    "babel-core": "^6.3.17",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-core": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "chai": "^3.4.1",
     "mocha": "^2.3.4"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.7.2"
   }
 }
